image fix align

--- a/style.css
+++ b/style.css
@@ -138,5 +138,5 @@ a.button{
   color: #fdf7dd;
 }
 img.headimage{
-  align-items: center;
+  align: center;
 }
